# nametable-pil

./: LICENSE.md  pyproject.toml
.github/workflows/: tests.yml
nametable_pil/: Color.py  Palette.py  Pattern.py  validators.py
tests/: test_color.py  test_palette.py  test_pattern.py  test_validators.py
