[tool.poetry]
name = "nametable_pil"
version = "0.1.0"
description = ""
authors = ["TheJoeSmo <joesmo.joesmo12@gmail.com>"]
readme = "README.md"
license = "GPL3"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.9.7,<3.11"
Pillow = "^8.4.0"
nametable = "^0.1.2"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
hypothesis = "^6.23.3"
isort = "^5.9.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
